--- a/css/normalize.css
+++ b/css/normalize.css
@@ -44,7 +44,8 @@ h1 {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   margin: 0;
   padding: 0;
 }
@@ -93,6 +94,11 @@ ul {
   padding: 0;
   margin: 0;
   list-style: none;
+}
+
+ol {
+  margin: 0;
+  padding: 0;
 }
 
 /**
