--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ body {
 }
 
 .login {
-  display: block;
+  /* display: block; */
   font-weight: 500;
   font-size: 18px;
   color: var(--light);
@@ -125,6 +125,146 @@ body {
 
 .login:hover {
   background-color: var(--accent-light-green);
+}
+
+.modal__input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: none;
+  box-sizing: border-box;
+  background: #f1f1f1;
+  border-radius: 5px;
+}
+
+.modal__input:focus {
+  outline: none;
+}
+
+/* Set a style for all buttons */
+.modal__btn {
+  margin: 0 auto;
+  display: block;
+  max-width: 260px;
+  font-weight: 500;
+  font-size: 14px;
+  color: var(--light);
+  border: none;
+  padding: 15px 75px;
+  background: var(--accent-dark-green);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: var(--tr);
+}
+
+.modal__btn:hover {
+  background: var(--accent-light-green);
+}
+
+/* Center the image and position the close button */
+.modal__imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+  position: relative;
+}
+
+.modal__content {
+  border-radius: 5px;
+}
+
+.modal__container {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  text-align: center;
+  padding: 30px;
+}
+
+.modal__title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 16px;
+  color: var(--dark);
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  padding-top: 60px;
+}
+
+/* Modal Content/Box */
+.modal__content {
+  background-color: var(--light);
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  width: 40%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button (x) */
+.close {
+  width: 19px;
+  height: 19px;
+  background-image: url(../img/modal-close.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  position: absolute;
+  right: 0;
+  top: -27px;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.modal__register {
+  font-weight: 500;
+  font-size: 12px;
+
+  text-decoration-skip-ink: none;
+  color: var(--accent-dark-green);
+}
+
+.modal__register:hover {
+  text-decoration: underline;
+}
+
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s;
+}
+
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+
+@keyframes animatezoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 /* hero */
@@ -752,60 +892,829 @@ body {
 
 .investors {
   position: relative;
-  background: linear-gradient(134deg, #1973fa 0%, #75acfd 100%);
-}
-
-.investors::before {
-  content: "";
-  position: absolute;
-  background-image: url(../img/investors/investors-background.png);
-  background-repeat: repeat;
-  background-size: cover;
-  background-position: center center;
-  width: 100%;
-  height: auto;
+  background: url(../img/investors/investors-background.png),
+    linear-gradient(134deg, #1973fa 0%, #75acfd 100%);
+  margin-top: 100px;
 }
 
 .investors__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   position: relative;
+  padding-top: 59px;
+  padding-bottom: 63px;
 }
 
 .investors__info {
+  max-width: 556px;
 }
 
 .investors__info__title {
   font-weight: 700;
   font-size: 40px;
   line-height: 150%;
-  color: #fff;
+  color: var(--light);
+  margin-bottom: 17px;
 }
 
 .investors__info__description {
   font-weight: 400;
   font-size: 18px;
   line-height: 167%;
-  color: #fff;
+  color: var(--light);
+  margin-bottom: 21px;
 }
 
 .investors__info__link {
   font-weight: 600;
   font-size: 18px;
   line-height: 444%;
-  color: #fff;
+  color: var(--light);
   border-radius: 10px;
-  background: #07af91;
+  padding: 27px 36px;
+  background: var(--accent-dark-green);
+  transition: var(--tr);
+}
+
+.investors__info__link:hover {
+  background: var(--accent-light-green);
 }
 
 .investors__box {
-}
-
-.investors__box__item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+  gap: 20px;
 }
 
 .investors__logo {
+  max-width: 205px;
+  border-radius: 10px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.25);
 }
 
+/* result */
+
+.result {
+  margin-top: 100px;
+}
+
+.result__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+  margin-bottom: 20px;
+}
+
+.result__box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.result__item {
+  text-align: center;
+  padding: 60px 53px;
+  border-radius: 10px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.09);
+  background: var(--light);
+}
+
+.result__item__number {
+  font-weight: 800;
+  font-size: 80px;
+  color: var(--blue-rgba);
+}
+
+.result__item__title {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 167%;
+  color: var(--dark);
+  margin-bottom: 10px;
+}
+
+.result__item__description {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 133%;
+  text-align: center;
+  color: var(--dark);
+}
+
+/* price */
+
+.price {
+  margin-top: 100px;
+}
+
+.price__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+  margin-bottom: 35px;
+}
+
+.price__box {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.price__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.09);
+  padding: 30px 40px;
+  background: var(--light);
+  transition: var(--tr);
+}
+
+.price__item:hover {
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+}
+
+.price__item__head {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.price__item__head__img {
+  width: auto;
+  height: 76px;
+}
+
+.price__item__head__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 125%;
+  text-align: center;
+  color: #1b1b1b;
+  margin-bottom: 28px;
+}
+
+.price__item__body {
+  margin-bottom: 11px;
+}
+
+.price__item__body__title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 333%;
+  color: var(--dark);
+}
+
+.price__item__body__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  list-style-position: inside;
+}
+
+.price__item__body__list__item {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 219%;
+  color: var(--dark);
+}
+
+.price__item__body__block {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-top: 1px solid #e3e3e3;
+}
+
+.price__item__body__block__title {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 333%;
+  color: var(--dark);
+}
+
+.price__item__body__block__value {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 375%;
+  color: var(--dark);
+}
+
+.price__accent {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 333%;
+  color: var(--accent-dark-blue);
+}
+
+.price__item__body__link {
+  display: block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 28px;
+  border-radius: 10px;
+  text-align: center;
+  color: var(--light);
+  background: var(--accent-dark-blue-grad);
+  margin-top: 20px;
+}
+
+.price__item__body__link:hover {
+  background: var(--accent-light-blue-grad);
+}
+
+/* we */
+
+.we {
+  margin-top: 100px;
+}
+
+.we__wrapper {
+}
+
+.we__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+}
+
+.we__company {
+  display: flex;
+  gap: 66px;
+  margin-bottom: 125px;
+}
+
+.we__company__img {
+  max-width: 585px;
+}
+
+.we__company__content {
+  font-weight: 300;
+  font-size: 20px;
+  line-height: 150%;
+  color: var(--dark);
+  margin-top: 104px;
+}
+
+.we__company__description__accent {
+  font-weight: 600;
+  color: var(--accent-dark-blue);
+}
+
+.we__person {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+  padding: 0 45px 0 65px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.09);
+  background: #fff;
+}
+
+.we__person__img {
+  max-width: 375px;
+  background-image: url(../img/roman-bcg.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center bottom 38%;
+}
+
+.we__person__content {
+  margin: auto 0;
+  max-width: 608px;
+}
+
+.we__person__content__description {
+  font-style: italic;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 162%;
+  color: var(--dark);
+  margin-bottom: 47px;
+}
+
+.we__person__name {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 179%;
+  color: var(--dark);
+}
+
+.we__person__post {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 179%;
+  color: var(--dark);
+}
+
+.we__gallery {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 100px;
+}
+
+.we__gallery__input[type="checkbox"] {
+  display: none;
+}
+
+.we__gallery__input + .we__gallery__label {
+  display: block;
+  width: 236px;
+  height: 157px;
+  outline: none;
+
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+.we__gallery__input + .we__gallery__label:hover {
+  cursor: zoom-in;
+}
+
+.we__gallery__input:checked + .we__gallery__label {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+  background-color: rgba(10, 10, 10, 0.8);
+  width: unset;
+  height: unset;
+}
+
+.we__gallery__input:checked + .we__gallery__label:hover {
+  cursor: zoom-out;
+}
+
+/* experts */
+
+.experts {
+  margin-top: 100px;
+}
+
+.experts__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+  margin-bottom: 20px;
+}
+
+.carousel__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.carousel__button {
+  display: block;
+  width: 39px;
+  height: 39px;
+  background-image: url(../img/arrow.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: none;
+  border-radius: 100%;
+  cursor: pointer;
+}
+
+.carousel__button__left {
+  transform: rotate(90deg);
+}
+
+.carousel__button__right {
+  transform: rotate(-90deg);
+}
+
+.carousel__track {
+  display: flex;
+  flex: 1;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+  scroll-behavior: smooth;
+  gap: 37px;
+}
+
+.product__card {
+  flex: 0 0 calc(20% + 28px); /* Adjust for gap */
+  text-align: center;
+  scroll-snap-align: start;
+}
+
+.experts__img {
+  max-width: 186px;
+  height: auto;
+  margin-bottom: 20px;
+}
+
+.experts__info {
+  display: flex;
+  flex-direction: column;
+}
+
+.experts__name {
+  font-weight: 600;
+  font-size: 18px;
+  text-align: center;
+  color: var(--dark);
+  margin-bottom: 10px;
+}
+
+.experts__responsibility {
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 133%;
+  text-align: center;
+  color: var(--dark);
+}
+
+/* partners */
+
+.partners {
+  margin-top: 100px;
+}
+
+.partners__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+  margin-bottom: 20px;
+}
+
+.partners__box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.partners__item {
+  border-radius: 10px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.09);
+  background: #fff;
+}
+
+/* rule */
+
+.rule {
+  background: url(../img/rule-background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  margin-top: 100px;
+}
+
+.rule:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
+.rule__wrapper {
+  position: relative;
+  max-width: 1018px;
+  text-align: center;
+  margin: 0 auto;
+  padding: 131px 0;
+}
+
+.rule__title {
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--light);
+  margin-bottom: 20px;
+}
+
+.rule__description {
+  margin: 0 auto;
+  max-width: 761px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 150%;
+  text-align: center;
+  color: var(--light);
+  margin-bottom: 20px;
+}
+
+.rule__link {
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--light);
+  padding: 27px 73px;
+  border-radius: 10px;
+  background: var(--accent-dark-blue-grad);
+}
+
+.rule__link:hover {
+  background: var(--accent-light-blue-grad);
+}
+
+/* events */
+
+.events {
+  margin-top: 100px;
+}
+
+.events__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 222%;
+  color: var(--accent-dark-blue);
+}
+
+.events__box {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 35px;
+}
+
+.events__item {
+  max-width: 392px;
+  border-radius: 10px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.09);
+  background: var(--light);
+  transition: var(--tr);
+}
+
+.events__item:hover {
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.35);
+}
+
+.events__item__img {
+  width: 100%;
+  height: auto;
+}
+
+.events__content {
+  padding: 19px 30px 25px;
+}
+
+.events__content__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 125%;
+  color: var(--dark);
+  margin-bottom: 10px;
+}
+
+.events__content__description {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 156%;
+  color: var(--dark);
+  margin-bottom: 35px;
+}
+
+.events__content__date {
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 179%;
+  color: var(--dark);
+}
+
+/* feedback */
+
+.feedback {
+  position: relative;
+  background: url(../img/investors/investors-background.png),
+    linear-gradient(134deg, #1973fa 0%, #75acfd 100%);
+  margin-top: 100px;
+}
+
+.feedback__wrapper {
+  display: flex;
+
+  justify-content: space-between;
+  position: relative;
+  padding: 76px 0;
+}
+
+.feedback__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.feedback__content__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 167%;
+  color: var(--light);
+  margin-bottom: 7px;
+}
+
+.feedback__content__description {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 222%;
+  color: var(--light);
+}
+
+.feedback__content__contact__title {
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 300%;
+  color: var(--light);
+}
+
+.feedback__content__contact__social-media {
+  display: flex;
+  gap: 58px;
+}
+
+.contact__social-media__link {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 300%;
+  color: var(--light);
+}
+
+.contact__social-media__link:hover {
+  text-decoration: underline;
+}
+
+.contact__social-media__link__img {
+  width: 53px;
+  height: 53px;
+  border-radius: 100%;
+  box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.25);
+}
+
+.feedback__form__container {
+  width: 598px;
+  max-width: 598px;
+  border-radius: 10px;
+  box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.25);
+  padding: 24px 42px 42px;
+  background: var(--light);
+}
+
+.feedback__form {
+  display: flex;
+  flex-direction: column;
+}
+
+.feedback__form__group {
+  align-items: center;
+  border-bottom: 1px solid #e4e4e4;
+}
+
+.feedback__form__input {
+  width: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  color: #707070;
+  border: none;
+  padding: 24px 0;
+}
+
+.feedback__form__input:focus {
+  outline: 0;
+}
+
+.feedback__form__phone__group {
+  display: flex;
+  gap: 20px;
+}
+
+.phone__select {
+  border: none;
+}
+
+.phone__select:focus {
+  outline: none;
+}
+
+.feedback__form__btn {
+  max-width: 246px;
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--light);
+  padding: 27px 43px;
+  border: none;
+  border-radius: 10px;
+  background: var(--accent-dark-green);
+  cursor: pointer;
+  transition: var(--tr);
+  margin-top: 24px;
+}
+
+.feedback__form__btn:hover {
+  background: var(--accent-light-green);
+}
+
+/* footer */
+
 .footer {
+  background: url(../img/footer-background.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  padding: 24px 0;
+  margin-top: 20px;
+}
+
+.footer:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.78);
+}
+
+.footer__wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__logo {
+  display: block;
+  width: 149px;
+  height: 20px;
+  background-image: url(../img/logo.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-bottom: 19px;
+}
+
+.footer__copyright {
+  font-weight: 300;
+  font-size: 14px;
+  color: var(--light);
+}
+
+.footer__menu {
+  display: flex;
+  align-items: center;
+  gap: 52px;
+}
+
+.footer__menu__link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 444%;
+  color: var(--light);
+}
+
+.footer__menu__link:hover {
+  text-decoration: underline;
+}
+
+.footer__contacts {
+  max-width: 212px;
+}
+
+.footer__address {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 143%;
+  color: var(--light);
+}
+
+.footer__address__mail {
+  display: block;
+  font-weight: 400;
+  font-size: 14px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--light);
+  margin-top: 23px;
 }
 
 .nav-btn {
